--- a/pkg/adminserver/templates/app.html
+++ b/pkg/adminserver/templates/app.html
@@ -28,6 +28,7 @@
 				<tr>
 					<td><a href="{{$.Name}}/reviewapps/{{$reviewApp.Name}}">{{$reviewApp.Name}}</a></td>
 					<td>{{$reviewApp.Branch}}</td>
+					<td><a href="{{$.Name}}/reviewapps/{{$reviewApp.Name}}/delete">Delete</a></td>
 				</tr>
       {{end}}</table>
 {{end}}
