it deployed potatoes entirely from local data

--- a/pkg/adminserver/templates/app.html
+++ b/pkg/adminserver/templates/app.html
@@ -27,7 +27,7 @@
   		{{range $reviewApp := .ReviewApps}}
 				<tr>
 					<td><a href="{{$.Name}}/reviewapps/{{$reviewApp.Name}}">{{$reviewApp.Name}}</a></td>
-					<td>{{$reviewApp.Branch}}</td>
+					<td>{{$reviewApp.ImageTag}}</td>
 					<td><a href="{{$.Name}}/reviewapps/{{$reviewApp.Name}}/delete">Delete</a></td>
 				</tr>
       {{end}}</table>
